Accessible CAPTCHAs and CAPTCHA Alternatives

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -367,7 +367,14 @@
       -->
     </ul>
 
-
+    <h3 id="captcha-access">Accessible <abbr>CAPTCHA</abbr>s and <abbr>CAPTCHA</abbr> Alternatives</h3>
+    <ul>
+      <li>Marion, Frank:
+        <a href="https://evolt.org/simple-captcha">A Very Simple And Effective Captcha</a>,
+        <i class="website">evolt.org</i>, 07.03.2008.
+      </li>
+     </ul>
+ 
     <h2>Colour and Contrast</h2>
     <ul>
       <li>Sethfors, Hampus:
