'Accessible HTML5 Media Players & More'

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -322,6 +322,10 @@
         <a href="https://github.com/codepo8/easy-youtube">easy-youtube on GitHub</a>.
         The code is available under the <abbr>BSD</abbr> 3-clause licence.
       </li>
+      <li>Raghavendra Satish Peri:
+        <a href="https://www.digitala11y.com/accessible-jquery-html5-media-players/">Accessible HTML5 Media Players &amp; More</a>,
+        <i class="website">Digital <abbr>A11Y</abbr></i>, 16.04.2018.
+      </li>
       <li>
         <a href="http://kensgists.github.io/apt/index.html#playermatrix">Web-Based Media Player Accessibility Comparison Table</a>
         (<a href="https://github.com/kensgists/apt">&ldquo;source code&rdquo; on GitHub</a>).
