AnySurfer blogs (Dutch and French)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -607,6 +607,12 @@
         <a href="https://webstandardssherpa.com/topics/accessibility.html">accessibility</a>.
       </li>
       <li>
+        <a href="http://www.anysurfer.be/nl/blog" hreflang="nl">AnySurfer blog</a>
+        (in Dutch) and
+        <a href="http://www.anysurfer.be/fr/blog">Blog AnySurfer</a>
+        (in French).
+      </li>
+      <li>
         <a href="http://accessibleculture.org/articles/">Accessible Culture</a>:
         blog by Jason Kiss; dormant since 2013.
       </li>
