CAPTCHA Hall of Shame

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -357,6 +357,9 @@
         <i class="blog">Naked Security (Sophos blog)</i>, 12.03.2013.
       </li>
       <li>
+        <a href="http://www.pineight.com/rant/captcha/"><abbr>CAPTCHA</abbr> Hall of Shame</a>.
+      </li>
+      <li>
         <a href="http://www.change.org/en-AU/petitions/it-s-time-to-finally-kill-captcha-2">Petition | (Wayne Hawkins) It's time to finally kill <abbr>CAPTCHA</abbr></a>,
         <i class="website">Change.org</i>.
       </li>
