--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -613,6 +613,10 @@
         (in French).
       </li>
       <li>
+        <a href="https://blog.temesis.com/">Blog Temesis</a>
+        (in French).
+      </li>
+      <li>
         <a href="http://accessibleculture.org/articles/">Accessible Culture</a>:
         blog by Jason Kiss; dormant since 2013.
       </li>
