--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -359,6 +359,10 @@
       <li>
         <a href="http://www.pineight.com/rant/captcha/"><abbr>CAPTCHA</abbr> Hall of Shame</a>.
       </li>
+      <li>Danchev, Dancho:
+        <a href="https://www.zdnet.com/article/report-googles-recaptcha-flawed/">Report: Google's re<abbr>CAPTCHA</abbr> flawed</a>,
+        <i class="website"><abbr>ZD</abbr>Net</i>, 15.12.2009.
+      </li>
       <li>
         <a href="http://www.change.org/en-AU/petitions/it-s-time-to-finally-kill-captcha-2">Petition | (Wayne Hawkins) It's time to finally kill <abbr>CAPTCHA</abbr></a>,
         <i class="website">Change.org</i>.
