--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   </header>
 
   <main>
+  <blockquote id="introquote">
+    <p>When <abbr>UX</abbr> doesn't consider ALL users, shouldn't it be known as "SOME Users' Experience" or... <abbr>SUX</abbr>?</p>
+    <p><cite><a href="https://twitter.com/thebillygregory/status/552466012713783297">Billy Gregory on Twitter, 06.01.2015</a></cite>
+  </blockquote>
+
   <section>
     <h2>Web</h2>
     <ul>
