Olivier Nourry: Accessiblog.fr

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -621,6 +621,11 @@
         blog by Jason Kiss; dormant since 2013.
       </li>
       <li>
+        <a href="http://accessiblog.fr/" hreflang="fr" lang="fr">Accessiblog.fr</a>:
+        blog by <span lang="fr">Olivier Nourry</span>, who originally published his articles on
+        <a href="http://webyboom.canalblog.com/archives/accessibilite/index.html" hreflang="fr" lang="fr">Webyboom</a>.
+      </li>
+      <li>
         <a href="http://blog.zeit.de/stufenlos/" hreflang="de" lang="de">Stufenlos: Blog zur Barrierefreiheit und Inklusion</a>:
         blog about the German accessibility that ran until February 2017.
       </li>
