--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -102,6 +102,13 @@
         <i class="blog">Microsoft Accessibility Blog</i>, 19.03.2018. Quote:
         <q>We moved the <a href="https://support.office.com/en-us/article/Use-the-Accessibility-Checker-on-your-Windows-desktop-to-find-accessibility-issues-a16f6de0-2f39-4a2b-8bd8-5ad801426c7f">Accessibility Checker</a> to the ribbon and usage increased 5 times.</q>
       </li>
+      <li>Anand B Pillai:
+        <a href="https://in.pycon.org/2010/talks/8-pdf-accessibility-with-python/"><abbr>PDF</abbr> Accessibility with Pytho</a>,
+        <i class="website">PyCon India, Bangalore, September 2010</i>.
+        The conference presetation reports on <abbr>PDF</abbr> accessibility checking code developed within the
+        eGovMon project in Norway.
+        <!--@@download-->
+      </li>
     </ul>
 
     <h3 id="pdf">Portable Document Format (<abbr>PDF</abbr>)</h3>
