Einfach für Alle (Blog)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -606,6 +606,9 @@
         is a web development blog that also has articles on
         <a href="https://webstandardssherpa.com/topics/accessibility.html">accessibility</a>.
       </li>
+      <li lang="de">Einfach für Alle:
+        <a href="https://www.einfach-fuer-alle.de/blog/" hreflang="de">accessBlog</a>.
+      </li>
       <li>
         <a href="http://www.anysurfer.be/nl/blog" hreflang="nl">AnySurfer blog</a>
         (in Dutch) and
