+h2: Accessibility of Non-Web ICT

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -312,6 +312,14 @@
       </li>
     </ul>
 
+    <h2>Accessibility of Non-Web <abbr>ICT</abbr></h2>
+    <ul>
+      <li>
+        <a href="https://www.w3.org/TR/wcag2ict/">Guidance on Applying WCAG 2.0 to Non-Web Information and Communications Technologies (<abbr>WCAG2ICT</abbr>)</a>:
+        <abbr>W3C</abbr> Working Group Note 5 September 2013.
+      </li>
+    </ul>
+
     <h2>Introductions to Accessibility</h2>
     <ul>
       <li>Jared Smith: 
