WordPress: Test for web accessibility

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -386,7 +386,8 @@
     <h3>WordPress</h3>
     <p>(Homepage: <a href="https://wordpress.org/">wordpress.org</a>.)
       See 
-      <a href="http://codex.wordpress.org/Accessibility">WordPress Codex: Accessibility</a>
+      <a href="http://codex.wordpress.org/Accessibility">WordPress Codex: Accessibility</a>,
+      <a href="https://make.wordpress.org/accessibility/handbook/best-practices/test-for-web-accessibility/">Test for web accessibility</a>
       and 
       <a href="https://make.wordpress.org/accessibility/">Make WordPress Accessible</a> (blog),
       <a href="https://make.wordpress.org/themes/handbook/review/accessibility/">Accessibility</a>
