Johansson: Accessible custom checkboxes ...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -303,6 +303,10 @@
         <a href="https://cantina.co/form-errors-screen-readers-can-access/">Form Errors Screen Readers Can Acces</a>,
         <i class="blog">Cantina blog</i>, 29.03.2017.
       </li>
+      <li>Johansson, Roger:
+        <a href="http://www.456bereastreet.com/archive/201211/accessible_custom_checkboxes_and_radio_buttons/">Accessible custom checkboxes and radio buttons</a>,
+        <i class="blog">456 Barea Street</i>, 16.11.2012.
+      </li>
       <li>
         <a href="https://stackoverflow.com/q/48265742/6002174">How to group form inputs accessibly without a fieldset?</a>&nbsp;&mdash;
         a question on StackOverflow.
