--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -307,6 +307,11 @@
         <a href="http://www.456bereastreet.com/archive/201211/accessible_custom_checkboxes_and_radio_buttons/">Accessible custom checkboxes and radio buttons</a>,
         <i class="blog">456 Barea Street</i>, 16.11.2012.
       </li>
+      <li>Bhandari, Aditya:
+        <a href="https://medium.com/claritydesignsystem/pure-css-accessible-checkboxes-and-radios-buttons-54063e759bb3">Pure <abbr>CSS</abbr>: Accessible Checkboxes and Radios Buttons</a>,
+        <i class="blog">Clarity Design System on Medium</i>, 03.02.2017 (four-minute read).
+        <!--@@check links to github.io, esp. 'Clarity Design System': https://vmware.github.io/clarity/-->
+      </li>
       <li>
         <a href="https://stackoverflow.com/q/48265742/6002174">How to group form inputs accessibly without a fieldset?</a>&nbsp;&mdash;
         a question on StackOverflow.
