Smith: The plague of outline:0

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -295,6 +295,10 @@
         <a href="https://css-tricks.com/focusing-on-focus-styles/">Focusing on Focus Styles</a>,
         <i class="websites"><abbr>CSS</abbr>-Tricks</i>, 29.03.2018.
       </li>
+      <li>Smith, Jared:
+        <a href="https://webaim.org/blog/plague-of-outline-0/">The plague of outline:0</a>,
+        <i class="blog">Web<abbr>AIM</abbr> blog</i>, 07.04.2008.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
