--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -299,6 +299,10 @@
         <a href="https://webaim.org/blog/plague-of-outline-0/">The plague of outline:0</a>,
         <i class="blog">Web<abbr>AIM</abbr> blog</i>, 07.04.2008.
       </li>
+      <li>Fields, Jeremy:
+        <a href="https://www.viget.com/articles/managing-focus-styles-without-breaking-accessibility/">Managing :focus styles without breaking accessibility</a>,
+        <i class="website">Viget</i>, 09.07.2014.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
