WebAIM: PowerPoint Accessibility.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -77,6 +77,10 @@
         * Dyslexia: Fonts:
           ** Neil Milliken: "On fonts and dyslexia", 16.04.2015: https://atrophiedmind.wordpress.com/2015/04/16/on-fonts-and-dyslexia/ 
       -->
+      <li>
+        <a href="https://webaim.org/techniques/powerpoint/">PowerPoint Accessibility</a>,
+        <i class="website">Web<abbr>AIM</abbr></i>, last updated in March 2018.
+      </li>
       <li>Microsoft in Government:
         <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
         YouTube playlist consisting of 10 short videos.
