Digital A11Y: accessibility blogs roundup

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -632,6 +632,11 @@
         <a href="http://blog.zeit.de/stufenlos/" hreflang="de" lang="de">Stufenlos: Blog zur Barrierefreiheit und Inklusion</a>:
         blog about the German accessibility that ran until February 2017.
       </li>
+      <li>
+        <a href="https://www.digitala11y.com/accessibility-blogs/">The Great Accessibility Blogs Roundup</a>,
+        <i class="website">Digital <abbr>A11Y</abbr></i>, April 2018.
+        (Only lists blogs in English.)
+      </li>
       <li>Duggin, Alistair:
         <a href="http://alistairduggin.co.uk/blog/accessibility-blogs/">Accessibility Blogs</a>,
         <i class="blog">Alistair Duggin's blog</i>, 28.03.2012, updated 03.04.2012:
