--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -81,6 +81,10 @@
         <a href="https://webaim.org/techniques/powerpoint/">PowerPoint Accessibility</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in March 2018.
       </li>
+      <li>
+        <a href="https://webaim.org/techniques/word/">Microsoft Word: Creating Accessible Documents</a>,
+        <i class="website">Web<abbr>AIM</abbr></i>, last updated in July 2016.
+      </li>
       <li>Microsoft in Government:
         <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
         YouTube playlist consisting of 10 short videos.
