--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -94,6 +94,11 @@
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in October 2011.
         <br />This document is now dated, especially with more frequent release of LibreOffice.
       </li>
+      <li>
+        <a href="https://wiki.documentfoundation.org/Accessibility/Creating_Accessible_LibreOffice_Files">How to Create Accessible LibreOffice files</a>,
+        <i class="website">Document Foundation Wiki</i> (Creative Commons Attribution-ShareAlike 3.0 Unported License).
+        <!--"Editing Accessibility/Text Attributes": https://wiki.documentfoundation.org/Accessibility/TextAttributes - this is actually API documentation-->
+      </li>
       <li>Microsoft in Government:
         <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
         YouTube playlist consisting of 10 short videos.
