Geier: Give Your Site Some Focus!

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -303,6 +303,11 @@
         <a href="https://www.viget.com/articles/managing-focus-styles-without-breaking-accessibility/">Managing :focus styles without breaking accessibility</a>,
         <i class="website">Viget</i>, 09.07.2014.
       </li>
+      <li>Geier, Caitlin:
+        <a href="https://www.deque.com/blog/give-site-focus-tips-designing-usable-focus-indicators/">Give Your Site Some Focus! Tips for Designing Useful and Usable Focus Indicators</a>,
+        <i class="blog">Deque blog</i>, 29.06.2016.
+        This article is also relevant to keyboard focus in form fields.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
