Gifford: Personalization & Accessibility with Drupal

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -203,7 +203,7 @@
 
     <h3>Drupal</h3>
     <p>(Homepage: <a href="https://www.drupal.org/">www.drupal.org</a>.)
-      See: 
+      See:
       <a href="https://www.drupal.org/about/accessibility">Accessibility Statement</a>,
       <a href="https://www.drupal.org/project/accessibility">Accessibility</a>,
       <a href="https://www.drupal.org/community-initiatives/drupal-core/accessibility">Contribute to accessibility</a>,
@@ -221,11 +221,15 @@
         (video with auto-generated captions), Accessibility Camp Ottawa, 
         December 2014.
       </li>
-      <li>Mike Gifford: 
+      <li>Mike Gifford:
         <a href="https://www.youtube.com/watch?v=LeXud37AjU4">The Drupal 
         Accessibility Advantage: It's all about starting with Core</a>
         (video with captions),
         <a href="http://www.inclusivedesign24.org/2014/">Inclusive Design 24</a>, May 2014.
+      </li>
+      <li>Mike Gifford:
+        <a href="https://medium.com/@mgifford/personalization-accessibility-with-drupal-c037a62eac48">Personalization &amp; Accessibility with Drupal</a>,
+        <i class="blog">Mike Gifford on Medium</i>, 05.05.2018 (four-minute read).
       </li>
       <li>Jesse Beach:
         <a href="https://www.youtube.com/watch?v=sqoi6s_2cZw">Accessibility
@@ -237,8 +241,7 @@
         Aural User Interfaces</a> (video with auto-generated captions),
         DrupalCon Portland, March 2013.
       </li>
-      <li>
-        Mike Gifford &amp; Hannah Corey:
+      <li>Mike Gifford &amp; Hannah Corey:
         <a href="https://www.youtube.com/watch?v=ZvxDIPmBfpA">How to Use 
         Drupal 7 to Meet Your Accessibility Goals</a> (video without captions), September 2012.
       </li>
