W3C: Personalization Semantics Explainer 1.0

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -231,6 +231,10 @@
         </ul>
       </li>
       <li>
+        <a href="https://www.w3.org/TR/personalization-semantics-1.0/">Personalization Semantics Explainer 1.0</a>
+        (currently a <abbr>W3C</abbr> Working Draft).
+      </li>
+      <li>
         <a href="http://references.modernisation.gouv.fr/rgaa-3-0" 
         lang="fr">Référentiel Général d'Accessibilité pour les Administrations 
         (<abbr>RGAA</abbr>)</a>: version 3 of the accessibility guidelines
