Pickering: Inclusive Design Patterns

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -261,6 +261,10 @@
       <li><a href="https://letorey.co.uk/blog/a11y-isnt-just"><abbr title="accessibility">A11y</abbr> isn't Just…</a>,
         <i class="website">letorey.co.uk</i>, 04.03.2018.
       </li>
+      <li>Pickering, Heydon:
+        <i class="booktitle">Inclusive Design Patterns</i>. Rakuten Kobo / Smashing Magazine, October 2016.
+        <a href="https://www.kobo.com/de/en/ebook/inclusive-design-patterns"><abbr>ISBN</abbr> 9783945749456</a> (e-book in <abbr>ePUB</abbr> 2 format, <abbr>DRM</abbr>-Free).
+      </li>
       <li>Newell, Alan F.:
         <i class="booktitle">Design and the Digital Divide: Insights from 40 Years in Computer Support for Older and Disabled People</i>.
         Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
