Petrick: Making Computers Accessible

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -270,6 +270,11 @@
         Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
         <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00369ED1V01Y201106ARH001">Morgan &amp; Claypool, 2011.</a> (195 pages)
       </li>
+      <li>Petrick, Elizabeth R.:
+        <i class="booktitle">Making Computers Accessible: Disability Rights and Digital Technology</i>.
+        Johns Hopkins University Press, March 2015. (208 pages)
+        <a href="https://jhupbooks.press.jhu.edu/content/making-computers-accessible"><abbr>ISBN</abbr> 9781421416472</a> (e-book).
+      </li>
     </ul>
 
     <h2>Braille</h2>
