Pickering: Apps for All.

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -144,6 +144,10 @@
         <i class="blog">Deque Blog</i>, 06.02.2018.
       </li>
       <!-- https://twitter.com/search?q=mobile%20web%20accessibility&src=typd -->
+      <li>Pickering, Heydon:
+        <i class="booktitle">Apps For All: Coding Accessible Web Applications</i>. Rakuten Kobo / Smashing Magazine, September 2014.
+        <a href="https://www.kobo.com/de/en/ebook/apps-for-all-coding-accessible-web-applications"><abbr>ISBN</abbr> 9783944540801</a> (e-book in <abbr>ePUB</abbr> 2 format, <abbr>DRM</abbr>-Free).
+      </li>
     </ul>
 
     <h3>Finding Accessible Apps and Devices</h3>
