Munim: What's Next? A Practical Introduction to ...

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -206,6 +206,10 @@
         <a href="https://www.youtube.com/watch?v=SOZwfQO4rVM">Inclusive design and testing: Making your app accessible - Google I/O 2016</a>
         (YouTube, 40 minutes, 20 May 2016).
       </li>
+      <li>Munim, Ataul:
+        <a href="https://proandroiddev.com/whats-next-a-practical-introduction-to-accessibility-on-android-79c90d27e124">What’s Next? A Practical Introduction to Accessibility on Android</a>,
+        <i class="blog">ProAndroidDev on Medium</i>, 22.04.2018 (twelve-minute read).
+      </li>
       <li>Phil Weaver, Eve Andersson, Casey Burkhardt, Hugh Oh, Mark Riccobono:
         <a href="https://www.youtube.com/watch?v=euEsfNR5Zw4">Improve Your Android App's Accessibility</a>,
         talk from Google I/O 2015.
