Adam: ARIA Tab Panel Accessibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -464,6 +464,10 @@
         <a href="https://simplyaccessible.com/article/danger-aria-tabs/">Danger! <abbr>ARIA</abbr> tabs</a>,
         <i class="website">simply accessible</i>, 14.04.2016.
       </li>
+      <li>Adam, Paul J.:
+        <a href="https://www.deque.com/blog/a11y-support-series-part-1-aria-tab-panel-accessibility/"><abbr>ARIA</abbr> Tab Panel Accessibility: <abbr>A11y</abbr> Support Series</a>,
+        <i class="blog">Deque blog</i>, 06.07.2016.
+      </li>
     </ul>
     <h3>Sliders</h3>
     <ul>
