Pitman: 5 accessibility tests you can do in 5 minutes

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -110,6 +110,10 @@
         <a href="https://www.boia.org/blog/4-accessibility-tips-for-web-developers">4 Accessibility Tips for Web Developers</a>,
         <i class="website">Bureau of Internet Accessibility</i>, 27.03.2018.
       </li>
+      <li>Pitman, Gemma:
+        <a href="https://openinclusion.com/blog/5-accessibility-tests/">5 accessibility tests you can do in 5 minutes</a>,
+        <i class="blog">Open Inclusion</i>, 02.03.2018.
+      </li>
     </ul>
 
     <h2>Support in Assistive Technolgies</h2>
