Sollinger: Five golden rules for compliant alt text

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -221,6 +221,10 @@
         <a href="http://patrickkettner.com/posts/responsive-image-maps/">Creating Responsive Image Maps</a>,
         <i class="blog">Patrick Kettner's blog</i>, 31.12.2017.
       </li>
+      <li>Sollinger, Stefan:
+        <a href="https://www.abilitynet.org.uk/blog/five-golden-rules-compliant-alt-text">Five golden rules for compliant alt text</a>,
+        <i class="blog">AbilityNet blog</i>, 14.02.2014.
+      </li>
     </ul>
 
     <h3>Accessible <abbr title="Scalable Vector Graphis">SVG</abbr></h3>
