Coyier: Overriding Default Button Styles

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -337,6 +337,10 @@
         <i class="blog">Clarity Design System on Medium</i>, 03.02.2017 (four-minute read).
         <!--@@check links to github.io, esp. 'Clarity Design System': https://vmware.github.io/clarity/-->
       </li>
+      <li>Coyier, Chris:
+        <a href="https://css-tricks.com/overriding-default-button-styles/">Overriding Default Button Styles</a>,
+        <i class="website"><abbr>CSS</abbr>-Tricks</i>, 09.05.2018.
+      </li>
       <li>
         <a href="https://stackoverflow.com/q/48265742/6002174">How to group form inputs accessibly without a fieldset?</a>&nbsp;&mdash;
         a question on StackOverflow.
