Pickering: A Content Slider (2017)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -518,6 +518,11 @@
     </ul>
     <h3>Other User Interface Components or Widgets</h3>
     <ul>
+      <li>Pickering, Heydon:
+        <a href="https://inclusive-components.design/a-content-slider/">A Content Slider</a>,
+        <i class="website">Inclusive Components</i>, 22.11.2017.
+        Article about carousels.
+      </li>
       <li>Wright, Tim:
         <a href="http://csskarma.com/blog/aria-owns/">Upgrading <abbr>DOM</abbr> Hierarchy for Accessibility with Aria-owns</a>,
         <i class="blog"><abbr>css</abbr>karma blog</i>, 15.10.2017.
