Pickering: ARIA examples (no date)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -523,6 +523,10 @@
         <i class="website">Inclusive Components</i>, 22.11.2017.
         Article about carousels.
       </li>
+      <li>Pickering, Heydon:
+        <a href="http://heydonworks.com/practical_aria_examples/"><abbr>ARIA</abbr> examples</a>,
+        <i class="website">Heydon Works</i> (no date).
+      </li>
       <li>Wright, Tim:
         <a href="http://csskarma.com/blog/aria-owns/">Upgrading <abbr>DOM</abbr> Hierarchy for Accessibility with Aria-owns</a>,
         <i class="blog"><abbr>css</abbr>karma blog</i>, 15.10.2017.
