+h2: Web Design for Dyslexia

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -615,6 +615,20 @@
       <!--@@ http://kiw.hs-merseburg.de/index.php/2018/04/06/barrierefreie-typografie-mobil-eine-app-fuer-barrierefreies-design/ -->
     </ul>
 
+    <h2>Web Design for Dyslexia</h2>
+    <ul>
+      <li>
+        <a href="http://dyslexia.yale.edu/">The Yale Center for Dyslexia &amp; Creativity</a>:
+        this website does not explain how to create content that is easier to process for people with dyslexia,
+        but provides information about the impairment.
+      </li>
+      <li>Anderson, Shaun:
+        <a href="https://www.hobo-web.co.uk/design-website-for-blind/">How To Design Websites For Blind/Visually Impaired, Deaf, Disabled &amp; Dyslexic Visitors</a>,
+        <i class="website">Hobo <abbr>UK</abbr> <abbr>SEO</abbr> Services</i>, 04.04.2018.
+        <!--Forwarded from: Jack Pickard: Web Designing For Dyslexia - What Problems Would a Dyslexic User Face? > > Accessible Website Design > Hobo Web: http://www.hobo-web.co.uk/tips/100.htm -->
+      </li>
+    </ul>
+
     <h2>Unsorted Web Accessibility Links</h2>
     <ul>
       <li><i class="website">A List Apart</i>:
