Zusman: Desiging for Dyslexia (Part 1 & 2)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -627,6 +627,14 @@
         <i class="website">Hobo <abbr>UK</abbr> <abbr>SEO</abbr> Services</i>, 04.04.2018.
         <!--Forwarded from: Jack Pickard: Web Designing For Dyslexia - What Problems Would a Dyslexic User Face? > > Accessible Website Design > Hobo Web: http://www.hobo-web.co.uk/tips/100.htm -->
       </li>
+      <li>Zusman, Andrew:
+        <a href="http://www.uxbooth.com/articles/designing-for-dyslexia-part-1/">Designing for Dyslexia, Part 1</a>,
+        <i class="website"><abbr>UX</abbr> Booth</i>, 21.10.2014.
+      </li>
+      <li>Zusman, Andrew:
+        <a href="http://www.uxbooth.com/articles/designing-for-dyslexia-part-2/">Designing for Dyslexia, Part 2</a>,
+        <i class="website"><abbr>UX</abbr> Booth</i>, 20.01.2015.
+      </li>
     </ul>
 
     <h2>Unsorted Web Accessibility Links</h2>
