pdf-barrierefreiheit.de

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -156,6 +156,11 @@
         shows how the tool works.
         There is also a <a href="https://www.youtube.com/watch?v=u_Le6aNsO0U">German version of the video</a>.
       </li>
+      <li>
+        <a href="http://pdf-barrierefreiheit.de/" hreflang="de" lang="de"><abbr>PDF</abbr> Barrierefreiheit</a>:
+        German blog about <abbr>PDF</abbr> accessibility.
+        <!--@@list individual blog posts-->
+      </li>
     </ul>
 
 
