Basics of Inclusive Design for Online Education (mooc)

--- a/courses.html
+++ b/courses.html
@@ -177,8 +177,13 @@
     <h3>Other Accessibility-Related Topics</h3>
     <ul>
       <li>
+        <a href="https://www.coursera.org/learn/inclusive-design">Basics of Inclusive Design for Online Education</a>
+        is a five-week course by the University of Colorado Boulder hosted on Coursera.
+        The first runs starts on 4 June 2018.
+      </li>
+      <li>
         <a href="http://accessibility.mrooms.net/">The Accessibility <abbr>MOOC</abbr>: Inclusive Online Course Design</a>
-        is a course that will run from 2 April to 27 April 2018.
+        is a course that ran from 2 April to 27 April 2018.
         <!-- "designed and facilitated by University of Montana’s Aaron Page and Marlene Zentz" https://moodle.com/2017/07/06/accessibility-mooc/ -->
         The course is hosted by Moodlerooms, Blackboard's open source division.
       </li>
