--- a/courses.html
+++ b/courses.html
@@ -109,7 +109,7 @@
         It requires five hours of study per week and start in September 2018.
       </li>
       <li><a href="http://centreforinclusivedesign.org/professional-certificate-web-accessibility/">Professional Certificate in Web Accessibility</a>
-        is a six-week course by the Centre for Inclusive Design (Australia). The course will run from 26 March to 4 May 2018
+        is a six-week course by the Centre for Inclusive Design (Australia). The course ran from 26 March to 4 May 2018
         and costs <abbr title="Australian dollar">AUD</abbr> $2,400.
       </li>
       <li>
@@ -179,7 +179,7 @@
       <li>
         <a href="https://www.coursera.org/learn/inclusive-design">Basics of Inclusive Design for Online Education</a>
         is a five-week course by the University of Colorado Boulder hosted on Coursera.
-        The first runs starts on 4 June 2018.
+        The first run starts on 4 June 2018.
       </li>
       <li>
         <a href="http://accessibility.mrooms.net/">The Accessibility <abbr>MOOC</abbr>: Inclusive Online Course Design</a>
@@ -254,7 +254,7 @@
       <li>
         <a href="https://www.futurelearn.com/courses/autism">Understanding Autism</a>
         by the University of Kent (<abbr>UK</abbr>) is 4-week course hosted on FutureLearn.
-        The first run of the course started on 1 May 2017; the second run will start on 4 September 2017.
+        The first run of the course started on 1 May 2017; the second run started on 4 September 2017.
       </li>
       <li>
         <a href="https://www.coursera.org/learn/deaf-culture">American Deaf Culture</a>
