+h3: Font Faces for People with Dyslexia

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -637,6 +637,19 @@
       </li>
     </ul>
 
+    <h3>Font Faces for People with Dyslexia</h3>
+    <ul>
+      <li>Gifford, Mike:
+        <a href="https://openconcept.ca/blog/mike/dyslexia-fonts-open-source">Dyslexia, Fonts &amp; Open Source</a>,
+        <i class="website">OpenConcept</i>, 27.07.2011.
+        <!--Site uses Fluid UI panel-->
+      </li>
+      <li>Gabriel, Robert James:
+        <a href="https://medium.com/@RobertJGabriel/research-into-web-accessibility-for-dyslexics-and-dyslexia-focused-fonts-such-as-opendyslexia-6ff27a10773b">Research into Web Accessibility for Dyslexics and Dyslexia-focused fonts such as OpenDyslexia</a>,
+        <i class="blog">Robert J. Gabriel on Medium</i>, 23.02.2017 (fourteen-minute read).
+      </li>
+    </ul>
+
     <h2>Unsorted Web Accessibility Links</h2>
     <ul>
       <li><i class="website">A List Apart</i>:
