Enigk: Writing for Dyslexic Readers

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -635,6 +635,10 @@
         <a href="http://www.uxbooth.com/articles/designing-for-dyslexia-part-2/">Designing for Dyslexia, Part 2</a>,
         <i class="website"><abbr>UX</abbr> Booth</i>, 20.01.2015.
       </li>
+      <li>Enigk, Erika:
+        <a href="https://www.quickanddirtytips.com/education/grammar/writing-for-dyslexic-readers">Writing for Dyslexic Readers</a>,
+        <i class="website">QuickAndDirtyTips.com</i>, 08.11.2012.
+      </li>
     </ul>
 
     <h3>Font Faces for People with Dyslexia</h3>
