--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -639,6 +639,10 @@
         <a href="https://www.quickanddirtytips.com/education/grammar/writing-for-dyslexic-readers">Writing for Dyslexic Readers</a>,
         <i class="website">QuickAndDirtyTips.com</i>, 08.11.2012.
       </li>
+      <li>Anthony:
+        <a href="http://uxmovement.com/content/6-surprising-bad-practices-that-hurt-dyslexic-users/">6 Surprising Bad Practices That Hurt Dyslexic Users</a>,
+        <i class="website"><abbr>UX</abbr> Movement</i>, 23.01.2011.
+      </li>
     </ul>
 
     <h3>Font Faces for People with Dyslexia</h3>
