Chen & Keong: Affording inclusive dyslexia-friendly...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -651,6 +651,10 @@
         <a href="https://www.slideshare.net/cheilmann/scripting-enabled-jonathan-hassell-on-dyslexia-presentation">Dyslexia Barriers</a>:
         presentation at the Scripting Enabled conference in September 2008 (slides hosted on SlideShare).
       </li>
+      <li>Chen, Chwen Jen; Keong, Melissa Wei Yin:
+        <a href="https://link.springer.com/content/pdf/10.1007%2Fs10209-016-0501-0.pdf">Affording inclusive dyslexia-friendly online text reading</a>,
+        <i class="journal">Universal Access to the Information Society</i>, 16 (2017): 951–965.
+      </li>
     </ul>
 
     <h3>Font Faces for People with Dyslexia</h3>
