dyslexic.com: Typefaces for Dyslexia

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -668,6 +668,13 @@
         <a href="https://medium.com/@RobertJGabriel/research-into-web-accessibility-for-dyslexics-and-dyslexia-focused-fonts-such-as-opendyslexia-6ff27a10773b">Research into Web Accessibility for Dyslexics and Dyslexia-focused fonts such as OpenDyslexia</a>,
         <i class="blog">Robert J. Gabriel on Medium</i>, 23.02.2017 (fourteen-minute read).
       </li>
+      <li>
+        <a href="https://www.dyslexic.com/fonts/">Typefaces for Dyslexia</a>,
+        <i class="website">dyslexic.com</i> (no date).
+        This article describes several font faces <q>that are recommended and used by dyslexic people.</q>
+        It discusses Read Regular (by Natascha Frensch), Lexie Readable, Tiresias (designed for visual impairment but not specifically for dyslexia),
+        Century Gothic, Calibri, Sassoon, Myriad Pro and a few other fonts.
+      </li>
     </ul>
 
     <h2>Unsorted Web Accessibility Links</h2>
