Wright: Accessibility in Resizing Text (2017)

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -148,6 +148,10 @@
         <i class="booktitle">Apps For All: Coding Accessible Web Applications</i>. Rakuten Kobo / Smashing Magazine, September 2014.
         <a href="https://www.kobo.com/de/en/ebook/apps-for-all-coding-accessible-web-applications"><abbr>ISBN</abbr> 9783944540801</a> (e-book in <abbr>ePUB</abbr> 2 format, <abbr>DRM</abbr>-Free).
       </li>
+      <li>Wright, Tim:
+        <a href="https://www.24a11y.com/2017/accessibility-resizing-text/">Accessibility in Resizing Text</a>,
+        <i class="website">24 Accessibility</i>, 08.12.2017.
+      </li>
     </ul>
 
     <h3>Finding Accessible Apps and Devices</h3>
