Lexie Readable (font face)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -697,6 +697,12 @@
         this font face is free to use; it uses the 
         <a href="http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL">SIL-Open Font License (<abbr>OFL</abbr>)</a>.
       </li>
+      <li>
+        <a href="http://www.k-type.com/fonts/lexie-readable/">Lexie Readable</a>,
+        <!--redirected from http://www.k-type.com/?p=520 -->
+        <i class="website">K-Type</i>. This font face was formerly known as Lexia Readable.
+        It is free for personal, educational and charity use; other users should buy a licence.
+      </li>
     </ul>
 
     <h2>Unsorted Web Accessibility Links</h2>
