Read Regular (font face by Natasche Frensch)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -703,6 +703,19 @@
         <i class="website">K-Type</i>. This font face was formerly known as Lexia Readable.
         It is free for personal, educational and charity use; other users should buy a licence.
       </li>
+      <li>
+        <a href="http://www.readregular.com/english/intro.html">Read Regular</a>:
+        a font face developed by Natascha Frensch.
+      </li>
+      <!--
+      <li>
+        <a href=""></a>
+      </li>
+      -->
+      <!--No longer available:
+        * ? studiostudio - Dyslexie font: http://www.studiostudio.nl/
+        * Jennifer Nalewicki: Bold Stroke: New Font Helps Dyslexics Read [Slide Show]: Scientific American, October 26, 2011: http://www.scientificamerican.com/article.cfm?id=new-font-helps-dyslexics-read
+      -->
     </ul>
 
     <h2>Unsorted Web Accessibility Links</h2>
