Maier: Building a Business Case for Universal Design

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -278,6 +278,10 @@
         Johns Hopkins University Press, March 2015. (208 pages)
         <a href="https://jhupbooks.press.jhu.edu/content/making-computers-accessible"><abbr>ISBN</abbr> 9781421416472</a> (e-book).
       </li>
+      <li>Maier, Andrew:
+        <a href="http://www.uxbooth.com/articles/building-a-business-case-for-universal-design/">Building a Business Case for Universal Design</a>,
+        <i class="website"><abbr>UX</abbr> Booth</i>, 28.05.2013.
+      </li>
     </ul>
 
     <h2>Braille</h2>
