--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -282,6 +282,10 @@
         <a href="http://www.uxbooth.com/articles/building-a-business-case-for-universal-design/">Building a Business Case for Universal Design</a>,
         <i class="website"><abbr>UX</abbr> Booth</i>, 28.05.2013.
       </li>
+      <li>Featherstone, Derek:
+        <a href="http://simplyaccessible.com/article/indiana-jones/">Web accessibility lessons from Indiana Jones</a>,
+        <i class="website">Simply Accessible</i>, 08.03.2013.
+      </li>
     </ul>
 
     <h2>Braille</h2>
