Kalbag: Accessbilti for Everyone

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -286,6 +286,10 @@
         <a href="http://simplyaccessible.com/article/indiana-jones/">Web accessibility lessons from Indiana Jones</a>,
         <i class="website">Simply Accessible</i>, 08.03.2013.
       </li>
+      <li>Kalbag, Laura:
+        <i class="booktitle">Accessibility for Everyone</i>. A Book Apart, September 2017. (166 pages)
+        <a href="https://abookapart.com/products/accessibility-for-everyone"><abbr>ISBN</abbr> 978-1-937557-61-4</a>.
+      </li>
     </ul>
 
     <h2>Braille</h2>
