--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -383,6 +383,10 @@
         <a href="https://www.fronta11y.org/gesetzliche-herausforderungen-zur-digitalen-barrierefreiheit-durch-die-eu-richtlinie-2016-2102/">Gesetzliche Herausforderungen zur digitalen Barrierefreiheit durch die <abbr>EU</abbr>-Richtlinie 2016/2102</a></span>,
         <i class="website">Fronta11y</i>, 17.05.2018.
       </li>
+      <li>
+        <a href="https://wadcher.eu/"><abbr>WAD</abbr>cher: Web Accessibility Directive Decision Support Environment</a>:
+        website of a <abbr>EU</abbr>-funded project (January 2018 – December 2020).
+      </li>
     </ul>
 
     <h4>European Accessibility Act</h4>
