Brajnik: accessibility evaluation

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -928,6 +928,10 @@
         <a href="https://blog.prototypr.io/going-colorblind-an-experiment-in-empathy-and-accessibility-98b7003737ca">Going Colorblind: An Experiment in Empathy and Accessibility</a>,
         <i class="blog">Prototypr on Medium</i>, 02.04.2018 (seven-minute read).
       </li>
+      <li>Brajnik, Giorgio:
+        <a href="https://users.dimi.uniud.it/~giorgio.brajnik/projects/bw/">An accessibility evaluation method based on Barrier Walkthrough</a>.
+        (Licence: <abbr>CC-BY-SA</abbr>.)
+      </li>
       <!--
       <li>
         <a href=""></a>
