Drake: Automation and Accessibility

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -944,6 +944,10 @@
         <a href="http://epubsecrets.com/the-accidental-a11y-advocate.php">The Accidental A11y Advocate</a>,
         <i class="website">ePubSecrets</i>, 07.08.2017.
       </li>
+      <li>Drake, Ted:
+        <a href="https://intuitblog.com/powering-prosperity/automation-and-accessibility-building-a-better-web-for-everyone/">Automation and Accessibility: Building a Better Web for Everyone</a>,
+        <i class="blog">Intuit Blog</i>, 17.05.2018.
+      </li>
       <!--
       <li>
         <a href=""></a>
