BDA: Resources for teachers

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -948,6 +948,11 @@
         <a href="https://intuitblog.com/powering-prosperity/automation-and-accessibility-building-a-better-web-for-everyone/">Automation and Accessibility: Building a Better Web for Everyone</a>,
         <i class="blog">Intuit Blog</i>, 17.05.2018.
       </li>
+      <!--@@create section on dyslexia; not same as dyslexia in Web Accessibility Techniques-->
+      <li>
+        <a href="http://www.bdadyslexia.org.uk/educator/additional-resources-for-educators">Resources for teachers</a>,
+        <i class="website">British Dyslexia Association</i> (no date).
+      </li>
       <!--
       <li>
         <a href=""></a>
