Blog STC Accessibility SIG

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -673,6 +673,10 @@
         <a href="http://webyboom.canalblog.com/archives/accessibilite/index.html" hreflang="fr" lang="fr">Webyboom</a>.
       </li>
       <li>
+        <a href="http://stc-access.org/"><abbr>STC</abbr> Accessibility <abbr title="Special Interest Group">SIG</abbr></a>:
+        this blog has not been updated since March 2016.<!--Status May 2018-->
+      </li>
+      <li>
         <a href="http://blog.zeit.de/stufenlos/" hreflang="de" lang="de">Stufenlos: Blog zur Barrierefreiheit und Inklusion</a>:
         blog about the German accessibility that ran until February 2017.
       </li>
