--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -677,6 +677,10 @@
         this blog has not been updated since March 2016.<!--Status May 2018-->
       </li>
       <li>
+        <a href="http://anikto.com/wordpress/">Anikto</a>:
+        this blog has not been updated since October 2013.<!--Status May 2018; original title: User-Centered Design and Web Accessibility Blog - AniktoBlog-->
+      </li>
+      <li>
         <a href="http://blog.zeit.de/stufenlos/" hreflang="de" lang="de">Stufenlos: Blog zur Barrierefreiheit und Inklusion</a>:
         blog about the German accessibility that ran until February 2017.
       </li>
