As Your World Changes (Susan L. Gerhart's blog)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -642,6 +642,10 @@
         blog maintained by members of the Swiss foundation <span lang="de">Zugang für alle</span> or Access-for-all. 
         All blog posts are in German.
       </li>
+      <li>
+        <a href="https://asyourworldchanges.wordpress.com/">As Your World Changes &ndash; Adjusting to vision loss with class, using technology</a>:
+        blog by Susan L. Gerhart, a retired computer scientist.
+      </li>
       <li><a href="http://universalaccess.blogspot.de/" hreflang="pt">UniversalAccess</a>:
         blog by Jorge Fernandes, in Portuguese.
       </li>
