Dawood: Designing for Dyslexia

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -622,6 +622,11 @@
         this website does not explain how to create content that is easier to process for people with dyslexia,
         but provides information about the impairment.
       </li>
+      <li>Dawood, Sarah:
+        <a href="https://www.designweek.co.uk/issues/21-27-may-2018/designing-dyslexia-style-guide-make-reading-easy-everyone/">Designing for dyslexia: a style guide to make reading easy for everyone</a>,
+        <i class="website">Design Week</i>, 22.05.2018.
+        <!--@@Guidelines are a PDF download: http://www.bdadyslexia.org.uk/common/ckeditor/filemanager/userfiles/Dyslexia_Style_Guide_2018-final.pdf -->
+      </li>
       <li>Anderson, Shaun:
         <a href="https://www.hobo-web.co.uk/design-website-for-blind/">How To Design Websites For Blind/Visually Impaired, Deaf, Disabled &amp; Dyslexic Visitors</a>,
         <i class="website">Hobo <abbr>UK</abbr> <abbr>SEO</abbr> Services</i>, 04.04.2018.
