Dodson: Managing focus for accessibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -578,6 +578,12 @@
         <a href="https://www.levelaccess.com/challenges-mega-menus-standard-menus-make-accessible/">Creating Accessible Menus and Mega Menus</a>,
         <i class="website">Level Access</i>, 09.02.2018.
       </li>
+      <li>Dodson, Rob:
+        <a href="https://dev.to/robdodson/managing-focus-64l">Managing focus for accessibility</a>,
+        <i class="website">dev.to</i>, 22.05.2018.
+        This article answers the question,
+        <q>If I'm building a single page web app, what should happen to <code>focus</code> when the user clicks some navigation?</q>
+      </li>
     </ul>
 
     <h2>Abbreviations and Acronyms</h2>
