--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -689,6 +689,12 @@
         blog about the German accessibility that ran until February 2017.
       </li>
       <li>
+        <a href="http://paulocanning.blogspot.com/search/label/accessibility">Paul Canning - label: accessibility</a>:
+        articles labelled &ldquo;accessibility&rdquo; on Paul Canning's blog. The most recent
+        contribution in this category dates from 2009.
+        (See also <a href="http://paulcanning.blogspot.com/search/label/accessibility">Paul Canning's olg blog</a>.)
+      </li>
+      <li>
         <a href="https://www.digitala11y.com/accessibility-blogs/">The Great Accessibility Blogs Roundup</a>,
         <i class="website">Digital <abbr>A11Y</abbr></i>, April 2018.
         (Only lists blogs in English.)
@@ -702,6 +708,9 @@
         <a href="https://webaim.org/blog/blog-roundup/">The Great Accessibility Blog Roundup</a>,
         <i class="blog">Web<abbr>AIM</abbr> Blog</i>, 14.05.2007.
       </li>
+      <!--Sandi Wassmer: Accessibility and inclusivity | Action for Blind People Blog, published on 03-08-2010 : http://www.actionforblindpeople.org.uk/news/blog/there-is-a-world-of-a-difference-between-accessibility-and-inclusivity,221,BA.html 
+        Blog disappeared when Action for Blind People merged with RNIB on 1 April 2017: https://www.rnib.org.uk/who-we-are/action-for-blind-people (visited 02.06.2018).
+      -->
     </ul>
 
     <h2 id="a11y-bok">Accessibility Body of Knowledge</h2>
