Vincent Battaglia's blog

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -695,6 +695,11 @@
         (See also <a href="http://paulcanning.blogspot.com/search/label/accessibility">Paul Canning's olg blog</a>.)
       </li>
       <li>
+        <a href="http://www.vinch.be/blog/category/accessibilite/">Vincent Battaglia - category: accessibility</a>:
+        articles labelled &ldquo;accessibility&rdquo; on Vincent Battaglia's blog (in French).
+        The most recent contribution in this category dates from 2008.
+      </li>
+      <li>
         <a href="https://www.digitala11y.com/accessibility-blogs/">The Great Accessibility Blogs Roundup</a>,
         <i class="website">Digital <abbr>A11Y</abbr></i>, April 2018.
         (Only lists blogs in English.)
