Digital Darragh - tag: accessibility

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -668,6 +668,9 @@
         (in French).
       </li>
       <li>
+        <a href="http://www.digitaldarragh.com/tag/accessibility/">Digital Darragh – tag: accessibility</a>.
+      </li>
+      <li>
         <a href="http://accessibleculture.org/articles/">Accessible Culture</a>:
         blog by Jason Kiss; dormant since 2013.
       </li>
